# route

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py  runpod.sh
analysis/: dataset_shortlist.json  selected_feature.json  splits.json
experiments/: README.md  defaults.yaml  model_independent_defaults.yaml  phase_a_defaults.yaml  query_derived_defaults.yaml  setting.schema.yaml
experiments/M5/: arc_test_features.csv  arc_validation_features.csv
experiments/candidates/: arc.yaml  hellaswag.yaml  mmlu.yaml  mmlu_pro.yaml  truthfulqa_mcq.yaml
llm_routing/: corpus.py  design.py  develop.py  evaluate.py  hf_env.py  oracle.py  paths.py  pipeline.py  prompts.py  routing_labels.py  run.py  setting.py  signal_schema.py  signal_validation.py  signals.py
llm_routing/cross_model/: __init__.py  stage.py
llm_routing/deploy/: __init__.py  extract.py  policy.py  router.py  train.py
llm_routing/model_response/: __init__.py  protocol.py  stage.py
llm_routing/query_derived/: __init__.py  config.py  core.py  engineer.py  extract.py  run.py
llm_routing/signals/: __init__.py  record.py
paper/: README.md  acl.tex  macros.tex  main.tex  references.bib
paper/draft/: 01_introduction.tex  02_related_work.tex  03_method.tex  04_experimental_setup.tex  05_results_characterization.tex  06_results_routing.tex  07_discussion.tex  08_conclusion.tex  09_appendix.tex
paper/figures/: README.md
paper/sections/: 01_introduction.tex  02_related_work.tex  04_method.tex  (+17 more)
requirements/: base.txt  dev.txt  full.txt  ml.txt
research/: 00_research_question.md  01_problem_statement.md  02_research_hypotheses.md  03_literature_gap.md  04_signal_design.md  05_computation_protocol.md  07_oracle_definition.md  08_evaluation_design.md  09_decision_register.md  10_experiment_registry.md  11_paper_outline.md  14_literature_record.md  18_model_independent_signal_selection.md  MASTER.md  README.md  WORKFLOW.md  acl_implementation_plan.md  acl_sprint_strategy.md  c3_end_to_end_report.md  c3_layerwise_concepts.md  c3_prefill_extensions_plan.md  claims.md  claims_evidence_matrix.md  literature_record.md  nomenclature.md  notes.md  paper_process_and_results.md  program.md  query_derived_spec.md  submission_milestones.md  transcript.md
scripts/: README.md  batch_oracle_cpu.sh  demo_one_query.py  prefetch_models.sh  promote_oracle_split.py  pull_c3_from_runpod.sh  run.py  run_c3_postprocess.sh  run_c3_runpod.sh  screen_c2_candidates.sh  setup_env.sh
tests/: test_corpus.py  test_layerwise.py  test_partition.py  test_pipeline.py  test_prompts.py  test_signals.py
(+43 files in other folders)
