[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-routing"
version = "0.1.0"
description = "LLM routing signal analysis and oracle pipeline"
readme = "experiments/README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
# ML stack without torch — use on RunPod images that already ship PyTorch.
ml = [
    "transformers>=4.43.0",
    "accelerate>=0.33.0",
]
# Only install when torch is not already available (local CPU/GPU dev).
gpu = [
    "torch>=2.1.0",
]
semantic = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
all = [
    "llm-routing[gpu,ml,semantic,dev]",
]

[tool.setuptools.packages.find]
include = ["llm_routing*"]
